--- a/.github/run-api-tests.yml
+++ b/.github/run-api-tests.yml
@@ -3,7 +3,9 @@ name: Run API Tests
 on:
   release:
     types: [created]
-
+  workflow_dispatch:
+    branches: "*"  
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest
