--- a/vecto/api-tests/pytest.ini
+++ b/vecto/api-tests/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 minversion = 6.0
-addopts = -x --durations=10 --durations-min=1.0 -vv
+addopts = --durations=10 --durations-min=1.0 -vv
 console_output_style = count
 markers = 
 	clear
