--- a/.github/workflows/run-api-tests.yml
+++ b/.github/workflows/run-api-tests.yml
@@ -10,9 +10,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout
+    - uses: actions/checkout@v3
     - name: Set up Python
-      uses: actions/setup-python
+      uses: actions/setup-python@v4
       with:
         python-version: '3.9'
     - name: Build wheel
