--- a/.github/workflows/run-api-tests.yml
+++ b/.github/workflows/run-api-tests.yml
@@ -33,10 +33,8 @@ jobs:
       env:
         vector_space_id : ${{ secrets.VECTOR_SPACE_ID }}
         user_token: ${{ secrets.USER_TOKEN }}
-        public_token: ${{ secrets.PUBLIC_TOKEN }}
       run: |
-        pytest tests/test_user.py
-        pytest tests/test_public.py
+        pytest tests/test_sdk.py
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
