--- a/.github/workflows/run-api-tests.yml
+++ b/.github/workflows/run-api-tests.yml
@@ -35,7 +35,7 @@ jobs:
       env:
         vector_space_id : ${{ secrets.VECTOR_SPACE_ID }}
         user_token: ${{ secrets.USER_TOKEN }}
-        vector_base_url:  ${{ secrets.VECTO_BASE_URL }}
+        vecto_base_url:  ${{ secrets.VECTO_BASE_URL }}
 
       run: |
         pytest tests/test_sdk.py
