remove debugger, add management and vectorspace pytests to workflow

--- a/.github/workflows/run-api-tests.yml
+++ b/.github/workflows/run-api-tests.yml
@@ -41,6 +41,8 @@ jobs:
 
       run: |
         pytest tests/test_sdk.py
+        pytest tests/test_management.py
+        pytest tests/test_vectorspace.py
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
