--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -3,7 +3,9 @@ name: Publish to PyPI
 on:
   release:
     types: [created]
-
+  workflow_dispatch:
+    branches: "*"
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest
